--- a/README
+++ b/README
@@ -1,1 +1,15 @@
-Esse repositório GitHub foi feito unicamente e somente para uso dos alunos e orientadores do atual grupo do escritório criativo do Centro Territorial de Educação Profissional da Bacia do Rio Grande.
+# REPOSITÓRIO GITHUB DO ESCRITÓRIO CRIATIVO DO CETEP-BRG
+
+## Do que se trata?
+
+    Esse repositório GitHub foi feito unicamente e somente para uso dos alunos e orientadores do atual grupo do escritório criativo do Centro Territorial de Educação Profissional da Bacia do Rio Grande.
+
+    Ele será utilizado para compartilhar os códigos, BDs, testes e links de diversas coisas conforme nós avançamos nos projetos.
+
+## Linguagens usadas
+
+    As linguagens principais utilizadas serão HTML, CSS e Javascript.
+
+## Onde encontrar links?
+   
+   Ainda em dev.
